# morfuse

./: CMakeLists.txt  README.adoc
.github/workflows/: cmake-linux.yml  cmake-windows.yml
include/morfuse/: Global.h
include/morfuse/Common/: AbstractClass.h  Align.h  ConstStr.h  Linklist.h  Math.h  OutputInfo.h  SafePtr.h  Script.h  SharedPtr.h  StringDictionary.h  ThreadSingleton.h  Time.h  TimeTypes.h  Vector.h  explicit_int.h  membuf.h  rawchar.h  short3.h  str.h
include/morfuse/Common/MEM/: BlockAlloc.h  DefaultAlloc.h  Memory.h  PreAllocator.h  TempAlloc.h
include/morfuse/Container/: Container.h  ContainerView.h  Container_archive.h  Stack.h  arrayset.h  set.h  set_archive.h  set_generic_hash.h  set_types.h  timer.h
include/morfuse/Script/: AbstractScript.h  Archiver.h  Class.h  ClassDef.h  ClassEventPrinter.h  ClassSystem.h  Component.h  ConstStr.h  ContainerClass.h  Context.h  Event.h  EventContext.h  EventQueue.h  EventQueueNode.h  EventSystem.h  Game.h  Level.h  Listener.h  MessageableException.h  ModuleDef.h  NamespaceDef.h  NamespaceManager.h  Parm.h  PredefinedObject.h  PredefinedString.h  ProgramScript.h  ScriptClass.h  ScriptException.h  ScriptMaster.h  ScriptOpcodes.h  ScriptThread.h  ScriptThreadLabel.h  ScriptVM.h  ScriptVariable.h  SimpleEntity.h  SourceException.h  SpawnArgs.h  StateScript.h  StringResolvable.h  TargetList.h  (+3 more)
include/morfuse/Script/Components/: TargetComponent.h
include/morfuse/Script/interfaces/: file.h  io.h
src/: CMakeLists.txt  Config.cmake.in  unistd.h
src/Common/: AbstractClass.cpp  ConstStr.cpp  Math.cpp  OutputInfo.cpp  SafePtr.cpp  StringDictionary.cpp  TargetList.cpp  Time.cpp  Vector.cpp  short3.cpp  str.cpp
src/Common/MEM/: BlockAlloc.cpp  DefaultAlloc.cpp  Memory.cpp  MemoryOverrides.cpp  PreAllocator.cpp  TempAlloc.cpp
src/Container/: set.cpp  timer.cpp
src/Parser/: Lexer.cpp  Lexer.hpp  Location.hpp  parser_refactor.txt  parsetree.cpp  parsetree.h  yyLexer.l  yyParser.yy
src/Script/: AbstractScript.cpp  Archiver.cpp  Class.cpp  ClassDef.cpp  ClassEventPrinter.cpp  ClassSystem.cpp  Compiler.cpp  Compiler.h  Component.cpp  ConstStr.cpp  Context.cpp  Event.cpp  EventContext.cpp  EventQueue.cpp  EventQueueNode.cpp  EventSystem.cpp  Game.cpp  Level.cpp  Listener.cpp  MessageableException.cpp  ModuleDef.cpp  NamespaceDef.cpp  NamespaceManager.cpp  Parm.cpp  PredefinedString.cpp  ProgramScript.cpp  ScriptClass.cpp  ScriptException.cpp  ScriptMaster.cpp  ScriptOpcodes.cpp  ScriptThread.cpp  ScriptThreadLabel.cpp  ScriptVM.cpp  ScriptVMOperation.cpp  ScriptVMOperation.h  ScriptVariable.cpp  SimpleEntity.cpp  SourceException.cpp  SpawnArgs.cpp  StateScript.cpp  (+5 more)
src/Script/Components/: TargetComponent.cpp
src/Script/interfaces/: file.cpp
tests/: CMakeLists.txt  archive.cpp  archive_targets.cpp  benchmarks.cpp  classdump.cpp  event.cpp  example1.cpp  mem_blockalloc_test.cpp  namespace.cpp  script_array.cpp  script_conditions.cpp  script_const_array.cpp  script_exceptions.cpp  script_hash.cpp  script_kmp.cpp  script_matrix.cpp  script_stack.cpp  script_syntax.cpp  script_target.cpp  script_thread.cpp  script_variable.cpp  script_wait.cpp  script_wait_thread.cpp  str_test.cpp  thread.cpp  tracked.cpp
tests/helpers/: archive.h  assert.h  context.h  handler.h  test.h
